# fit_blocks

./: README.md  pyproject.toml
src/: __main__.py  app.py  board.py  constants.py  custom_example.py  piece.py  placement.py  stats.py  timer.py
