[tool.poetry]
name = "fit-blocks"
version = "0.1.0"
description = ""
authors = ["Zzzoley <mzzzoley@gmail.com>"]
license = "N/A"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
